# solana-data-packer

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs  uploader.rs
onchain-program/: Cargo.toml
onchain-program/src/: instruction.rs  lib.rs  processor.rs  state.rs
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs
